# calc

./: CMakeLists.txt  calc.vcxproj  calc.vcxproj.filters  main.cpp
Debug/: CL.read.1.tlog  CL.write.1.tlog  calc.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  vc100.idb
Release/: CL.read.1.tlog  CL.write.1.tlog  calc.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog
calculator/: CMakeLists.txt  main.cpp  parserText.cpp  parserText.h
